--- a/src/navigation/navigation.module.css
+++ b/src/navigation/navigation.module.css
@@ -11,7 +11,7 @@
 .active {
   color: rgb(255, 255, 255);
   text-decoration: line-through;
-  text-decoration-color: violet;
+  text-decoration-color: #ffff5d;
 }
 
 .all_nav {
@@ -67,7 +67,7 @@ h3 {
   animation-delay: 0.5s;
 }
 .t {
-  animation-delay: 0.6s;
+  animation-delay: 0.5s;
 }
 
 .text_block {
